--- a/index.html
+++ b/index.html
@@ -75,9 +75,7 @@
 
   <section id="discord">
     <h2>Rejoignez notre Discord</h2>
-    <iframe src="https://discord.com/widget?id=1178261539850039386&theme=dark" width="350" height="500"
-      allowtransparency="true" frameborder="0"
-      sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+<iframe src="https://discord.com/widget?id=1260246130994708480&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
     <button onclick="window.open('https://discord.gg/KTuvTYYuTt', '_blank')">Rejoindre le Discord</button>
   </section>
 
