--- a/vote.html
+++ b/vote.html
@@ -8,18 +8,18 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-</header>
+</body>
  <ul>
     <li><button onclick="window.location.href='index.html'">Accueil</button></li>
-    <li><button onclick="window.location.href='mode.html'">Modes de jeu</button></li>
+    <li><button onclick="window.location.href='index.html'">Modes de jeu</button></li>
     <li><button onclick="window.open('https://discord.gg/KTuvTYYuTt', '_blank')">Discord</button></li>
   </ul>
-<header>
-    
-</body>
+<body>
+
+</header>
   <section id="vote">
     <h2>Votez pour nous</h2>
     <button onclick="window.open('https://serveur-prive.net/minecraft/trytochill/vote', '_blank')">Voté FR</button>
     <button onclick="window.open('https://minecraftservers.org/vote/663102', '_blank')">Voté Autre</button>
   </section>
-<body>
+<header>
