--- a/vote.html
+++ b/vote.html
@@ -9,6 +9,7 @@
 </head>
 
 </body>
+ <h1>Votez et gagnez des récompanses!</h1>
  <ul>
     <li><button onclick="window.location.href='index.html'">Accueil</button></li>
     <li><button onclick="window.location.href='index.html'">Modes de jeu</button></li>
