--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       <ul>
         <li><button onclick="window.location.href='#gamemodes'">Modes de jeu</button></li>
         <li><button onclick="window.open('https://discord.gg/KTuvTYYuTt', '_blank')">Discord</button></li>
+        <li><button onclick="window.location.href='vote.html'">Vote</button></li>
       </ul>
     </nav>
   </header>
