--- a/vote.html
+++ b/vote.html
@@ -8,19 +8,29 @@
   <link rel="stylesheet" href="style.css">
 </head>
 
-</body>
- <h1>Votez et gagnez des récompanses!</h1>
- <ul>
-    <li><button onclick="window.location.href='index.html'">Accueil</button></li>
-    <li><button onclick="window.location.href='index.html'">Modes de jeu</button></li>
-    <li><button onclick="window.open('https://discord.gg/KTuvTYYuTt', '_blank')">Discord</button></li>
-  </ul>
 <body>
+  <header>
+    <h1>Votez et gagnez des récompenses!</h1>
+    <nav>
+      <ul>
+        <li><button onclick="window.location.href='index.html'">Accueil</button></li>
+        <li><button onclick="window.location.href='index.html'">Modes de jeu</button></li>
+        <li><button onclick="window.open('https://discord.gg/KTuvTYYuTt', '_blank')">Discord</button></li>
+      </ul>
+    </nav>
+  </header>
 
-</header>
-  <section id="vote">
-    <h2>Votez pour nous</h2>
-    <button onclick="window.open('https://serveur-prive.net/minecraft/trytochill/vote', '_blank')">Voté FR</button>
-    <button onclick="window.open('https://minecraftservers.org/vote/663102', '_blank')">Voté Autre</button>
-  </section>
-<header>
+  <main>
+    <section id="vote">
+      <h2>Votez pour nous</h2>
+      <button onclick="window.open('https://serveur-prive.net/minecraft/trytochill/vote', '_blank')">Voter FR</button>
+      <button onclick="window.open('https://minecraftservers.org/vote/663102', '_blank')">Voter Autre</button>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2024 TryToChill Network.</p>
+  </footer>
+</body>
+
+</html>
