--- a/vote.html
+++ b/vote.html
@@ -47,6 +47,7 @@
       <h2>Votez pour nous</h2>
       <button onclick="window.open('https://serveur-prive.net/minecraft/trytochill/vote', '_blank')">Voter FR</button>
       <button onclick="window.open('https://minecraftservers.org/vote/663102', '_blank')">Voter Autre</button>
+      <button onclick="window.open('https://www.planetminecraft.com/server/trytochill-network-faction-s4-pvp-minigames-french-and-english-chat/vote/', '_blank')">Voter PMC</button>
     </section>
   </main>
 
